feat:Approvals + mitigation proposal + HIL interrupt
